--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 gamma_t.o
-wtheta.o
 gamma_t.out
-emu.out
+gamma_t.out.dSYM
+wtheta.o
 wtheta.out
+wtheta.out.dSYM
+emu.out
+emu.out.dSYM
+.DS_Store
+DeltaSigmaCMASS.pdf
+*.txt
+*.dat
